[gd_scene load_steps=8 format=1]

[ext_resource path="res://worldfield.gd" type="Script" id=1]
[ext_resource path="res://worldfield_tiles.xml" type="TileSet" id=2]
[ext_resource path="res://world_tile.gd" type="Script" id=3]
[ext_resource path="res://cloud.png" type="Texture" id=4]
[ext_resource path="res://icon.png" type="Texture" id=5]
[ext_resource path="res://player.tscn" type="PackedScene" id=6]

[sub_resource type="ColorRamp" id=1]

offsets = FloatArray( 0, 0.445215, 1 )
colors = ColorArray( 1, 1, 1, 0, 1, 1, 1, 0.645406, 1, 1, 1, 0 )

[node name="WorldField" type="Node2D"]

script/script = ExtResource( 1 )

[node name="BG" type="ParallaxBackground" parent="."]

layer = -1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
scroll/offset = Vector2( 0, 0 )
scroll/base_offset = Vector2( 0, 0 )
scroll/base_scale = Vector2( 1, 1 )
scroll/limit_begin = Vector2( 0, 0 )
scroll/limit_end = Vector2( 0, 0 )
scroll/ignore_camera_zoom = false

[node name="MapLayer" type="ParallaxLayer" parent="BG"]

motion/scale = Vector2( 0.3, 0.3 )
motion/mirroring = Vector2( 0, 0 )

[node name="TileMap" type="TileMap" parent="BG/MapLayer"]

mode = 0
tile_set = ExtResource( 2 )
cell/size = Vector2( 32, 32 )
cell/quadrant_size = 16
cell/custom_transform = Matrix32( 1, 0, 0, 1, 0, 0 )
cell/half_offset = 2
cell/tile_origin = 0
cell/y_sort = false
collision/use_kinematic = false
collision/friction = 1.0
collision/bounce = 0.0
collision/layers = 1
collision/mask = 1
occluder/light_mask = 1
tile_data = IntArray( 0, 0, 1, 0, 2, 0, 3, 0, 4, 1, 5, 1, 6, 1, 7, 1, 8, 1, 9, 1, 10, 1, 11, 1, 12, 1, 13, 1, 14, 1, 15, 1, 16, 1, 17, 1, 18, 1, 19, 1, 20, 1, 21, 1, 22, 1, 23, 1, 24, 1, 25, 1, 26, 1, 27, 1, 28, 1, 29, 1, 30, 1, 31, 1, 65536, 0, 65537, 0, 65538, 0, 65539, 0, 65540, 1, 65541, 1, 65542, 1, 65543, 1, 65544, 1, 65545, 1, 65546, 1, 65547, 1, 65548, 1, 65549, 1, 65550, 1, 65551, 1, 65552, 1, 65553, 1, 65554, 1, 65555, 1, 65556, 1, 65557, 1, 65558, 1, 65559, 1, 65560, 1, 65561, 1, 65562, 1, 65563, 1, 65564, 1, 65565, 1, 65566, 1, 65567, 1, 131072, 1, 131073, 1, 131074, 1, 131075, 1, 131076, 1, 131077, 1, 131078, 1, 131079, 1, 131080, 1, 131081, 1, 131082, 1, 131083, 1, 131084, 1, 131085, 1, 131086, 1, 131087, 1, 131088, 1, 131089, 1, 131090, 1, 131091, 1, 131092, 1, 131093, 1, 131094, 1, 131095, 1, 131096, 1, 131097, 1, 131098, 1, 131099, 1, 131100, 1, 131101, 1, 131102, 1, 131103, 1, 196608, 1, 196609, 1, 196610, 1, 196611, 1, 196612, 1, 196613, 1, 196614, 1, 196615, 1, 196616, 1, 196617, 1, 196618, 1, 196619, 1, 196620, 1, 196621, 1, 196622, 1, 196623, 1, 196624, 1, 196625, 1, 196626, 1, 196627, 0, 196628, 1, 196629, 1, 196630, 1, 196631, 1, 196632, 1, 196633, 1, 196634, 1, 196635, 1, 196636, 1, 196637, 1, 196638, 1, 196639, 1, 262144, 1, 262145, 1, 262146, 1, 262147, 1, 262148, 1, 262149, 1, 262150, 1, 262151, 1, 262152, 1, 262153, 1, 262154, 1, 262155, 1, 262156, 1, 262157, 1, 262158, 1, 262159, 1, 262160, 1, 262161, 1, 262162, 0, 262163, 0, 262164, 1, 262165, 1, 262166, 1, 262167, 1, 262168, 1, 262169, 1, 262170, 1, 262171, 1, 262172, 1, 262173, 1, 262174, 1, 262175, 1, 327680, 1, 327681, 1, 327682, 1, 327683, 1, 327684, 1, 327685, 1, 327686, 1, 327687, 1, 327688, 1, 327689, 1, 327690, 1, 327691, 1, 327692, 1, 327693, 1, 327694, 1, 327695, 1, 327696, 1, 327697, 1, 327698, 0, 327699, 0, 327700, 0, 327701, 1, 327702, 1, 327703, 1, 327704, 1, 327705, 1, 327706, 1, 327707, 1, 327708, 1, 327709, 1, 327710, 1, 327711, 1, 393216, 1, 393217, 1, 393218, 1, 393219, 1, 393220, 1, 393221, 1, 393222, 1, 393223, 1, 393224, 1, 393225, 1, 393226, 1, 393227, 1, 393228, 1, 393229, 1, 393230, 1, 393231, 1, 393232, 1, 393233, 1, 393234, 0, 393235, 0, 393236, 0, 393237, 0, 393238, 1, 393239, 1, 393240, 1, 393241, 1, 393242, 1, 393243, 1, 393244, 1, 393245, 1, 393246, 1, 393247, 1, 458752, 1, 458753, 1, 458754, 1, 458755, 1, 458756, 1, 458757, 1, 458758, 1, 458759, 1, 458760, 1, 458761, 1, 458762, 1, 458763, 0, 458764, 1, 458765, 1, 458766, 1, 458767, 1, 458768, 1, 458769, 1, 458770, 1, 458771, 0, 458772, 0, 458773, 0, 458774, 1, 458775, 1, 458776, 1, 458777, 1, 458778, 1, 458779, 1, 458780, 1, 458781, 1, 458782, 1, 458783, 1, 524288, 1, 524289, 1, 524290, 1, 524291, 1, 524292, 1, 524293, 1, 524294, 1, 524295, 1, 524296, 1, 524297, 1, 524298, 1, 524299, 0, 524300, 0, 524301, 1, 524302, 1, 524303, 1, 524304, 1, 524305, 1, 524306, 1, 524307, 1, 524308, 0, 524309, 0, 524310, 1, 524311, 1, 524312, 1, 524313, 1, 524314, 1, 524315, 1, 524316, 1, 524317, 1, 524318, 1, 524319, 1, 589824, 1, 589825, 1, 589826, 1, 589827, 1, 589828, 1, 589829, 1, 589830, 1, 589831, 1, 589832, 1, 589833, 1, 589834, 0, 589835, 0, 589836, 0, 589837, 1, 589838, 1, 589839, 1, 589840, 1, 589841, 1, 589842, 1, 589843, 1, 589844, 1, 589845, 1, 589846, 1, 589847, 1, 589848, 1, 589849, 1, 589850, 1, 589851, 0, 589852, 0, 589853, 0, 589854, 0, 589855, 1, 655360, 1, 655361, 1, 655362, 1, 655363, 1, 655364, 1, 655365, 1, 655366, 1, 655367, 1, 655368, 1, 655369, 1, 655370, 0, 655371, 0, 655372, 0, 655373, 1, 655374, 1, 655375, 1, 655376, 1, 655377, 1, 655378, 1, 655379, 1, 655380, 1, 655381, 1, 655382, 1, 655383, 1, 655384, 1, 655385, 1, 655386, 0, 655387, 0, 655388, 0, 655389, 0, 655390, 0, 655391, 1, 720896, 0, 720897, 0, 720898, 0, 720899, 0, 720900, 0, 720901, 1, 720902, 0, 720903, 0, 720904, 0, 720905, 0, 720906, 0, 720907, 0, 720908, 0, 720909, 0, 720910, 1, 720911, 1, 720912, 1, 720913, 1, 720914, 1, 720915, 1, 720916, 1, 720917, 1, 720918, 1, 720919, 1, 720920, 1, 720921, 1, 720922, 0, 720923, 0, 720924, 0, 720925, 0, 720926, 0, 720927, 0, 786432, 0, 786433, 0, 786434, 0, 786435, 0, 786436, 0, 786437, 0, 786438, 1, 786439, 1, 786440, 1, 786441, 1, 786442, 0, 786443, 0, 786444, 0, 786445, 0, 786446, 1, 786447, 1, 786448, 1, 786449, 1, 786450, 1, 786451, 1, 786452, 1, 786453, 1, 786454, 1, 786455, 1, 786456, 1, 786457, 0, 786458, 0, 786459, 0, 786460, 0, 786461, 0, 786462, 0, 786463, 0, 851968, 0, 851969, 0, 851970, 0, 851971, 0, 851972, 0, 851973, 1, 851974, 1, 851975, 1, 851976, 1, 851977, 1, 851978, 1, 851979, 0, 851980, 0, 851981, 1, 851982, 1, 851983, 1, 851984, 1, 851985, 1, 851986, 1, 851987, 1, 851988, 1, 851989, 1, 851990, 1, 851991, 1, 851992, 1, 851993, 0, 851994, 0, 851995, 0, 851996, 0, 851997, 0, 851998, 0, 851999, 0, 917504, 1, 917505, 1, 917506, 1, 917507, 1, 917508, 1, 917509, 1, 917510, 1, 917511, 1, 917512, 1, 917513, 1, 917514, 1, 917515, 1, 917516, 1, 917517, 1, 917518, 1, 917519, 1, 917520, 1, 917521, 1, 917522, 1, 917523, 1, 917524, 1, 917525, 1, 917526, 1, 917527, 1, 917528, 1, 917529, 1, 917530, 0, 917531, 0, 917532, 0, 917533, 0, 917534, 0, 917535, 0, 983040, 1, 983041, 1, 983042, 1, 983043, 1, 983044, 1, 983045, 1, 983046, 1, 983047, 1, 983048, 1, 983049, 1, 983050, 1, 983051, 1, 983052, 1, 983053, 1, 983054, 1, 983055, 1, 983056, 1, 983057, 1, 983058, 1, 983059, 1, 983060, 1, 983061, 1, 983062, 1, 983063, 1, 983064, 1, 983065, 1, 983066, 0, 983067, 0, 983068, 0, 983069, 0, 983070, 0, 983071, 1, 1048576, 1, 1048577, 1, 1048578, 1, 1048579, 1, 1048580, 1, 1048581, 1, 1048582, 1, 1048583, 1, 1048584, 1, 1048585, 1, 1048586, 1, 1048587, 1, 1048588, 1, 1048589, 0, 1048590, 1, 1048591, 1, 1048592, 1, 1048593, 1, 1048594, 1, 1048595, 1, 1048596, 1, 1048597, 1, 1048598, 1, 1048599, 1, 1048600, 1, 1048601, 1, 1048602, 1, 1048603, 1, 1048604, 1, 1048605, 1, 1048606, 1, 1048607, 1, 1114112, 1, 1114113, 1, 1114114, 1, 1114115, 1, 1114116, 1, 1114117, 1, 1114118, 1, 1114119, 1, 1114120, 1, 1114121, 1, 1114122, 1, 1114123, 1, 1114124, 0, 1114125, 0, 1114126, 0, 1114127, 1, 1114128, 1, 1114129, 1, 1114130, 1, 1114131, 1, 1114132, 1, 1114133, 1, 1114134, 1, 1114135, 1, 1114136, 1, 1114137, 1, 1114138, 1, 1114139, 1, 1114140, 1, 1114141, 1, 1114142, 1, 1114143, 1, 1179648, 1, 1179649, 1, 1179650, 1, 1179651, 1, 1179652, 1, 1179653, 1, 1179654, 1, 1179655, 1, 1179656, 1, 1179657, 1, 1179658, 1, 1179659, 0, 1179660, 0, 1179661, 0, 1179662, 0, 1179663, 1, 1179664, 1, 1179665, 1, 1179666, 1, 1179667, 1, 1179668, 1, 1179669, 1, 1179670, 1, 1179671, 1, 1179672, 1, 1179673, 1, 1179674, 1, 1179675, 1, 1179676, 1, 1179677, 1, 1179678, 1, 1179679, 1, 1245184, 1, 1245185, 1, 1245186, 1, 1245187, 1, 1245188, 1, 1245189, 1, 1245190, 1, 1245191, 1, 1245192, 1, 1245193, 0, 1245194, 0, 1245195, 0, 1245196, 0, 1245197, 0, 1245198, 0, 1245199, 1, 1245200, 1, 1245201, 1, 1245202, 1, 1245203, 1, 1245204, 1, 1245205, 1, 1245206, 1, 1245207, 1, 1245208, 1, 1245209, 1, 1245210, 1, 1245211, 1, 1245212, 1, 1245213, 1, 1245214, 1, 1245215, 1, 1310720, 1, 1310721, 1, 1310722, 1, 1310723, 1, 1310724, 1, 1310725, 1, 1310726, 1, 1310727, 1, 1310728, 0, 1310729, 0, 1310730, 0, 1310731, 0, 1310732, 0, 1310733, 0, 1310734, 0, 1310735, 0, 1310736, 0, 1310737, 1, 1310738, 1, 1310739, 1, 1310740, 1, 1310741, 1, 1310742, 1, 1310743, 1, 1310744, 1, 1310745, 1, 1310746, 1, 1310747, 1, 1310748, 1, 1310749, 1, 1310750, 1, 1310751, 1, 1376256, 1, 1376257, 1, 1376258, 1, 1376259, 1, 1376260, 1, 1376261, 1, 1376262, 1, 1376263, 1, 1376264, 1, 1376265, 0, 1376266, 0, 1376267, 0, 1376268, 0, 1376269, 0, 1376270, 0, 1376271, 0, 1376272, 1, 1376273, 1, 1376274, 1, 1376275, 1, 1376276, 0, 1376277, 0, 1376278, 1, 1376279, 1, 1376280, 1, 1376281, 1, 1376282, 1, 1376283, 1, 1376284, 1, 1376285, 1, 1376286, 1, 1376287, 1, 1441792, 1, 1441793, 1, 1441794, 1, 1441795, 1, 1441796, 1, 1441797, 1, 1441798, 1, 1441799, 1, 1441800, 1, 1441801, 1, 1441802, 0, 1441803, 0, 1441804, 0, 1441805, 0, 1441806, 0, 1441807, 0, 1441808, 0, 1441809, 1, 1441810, 1, 1441811, 1, 1441812, 0, 1441813, 0, 1441814, 1, 1441815, 1, 1441816, 1, 1441817, 1, 1441818, 1, 1441819, 1, 1441820, 1, 1441821, 1, 1441822, 1, 1441823, 1, 1507328, 1, 1507329, 1, 1507330, 1, 1507331, 1, 1507332, 1, 1507333, 1, 1507334, 1, 1507335, 1, 1507336, 1, 1507337, 1, 1507338, 1, 1507339, 0, 1507340, 0, 1507341, 0, 1507342, 0, 1507343, 0, 1507344, 1, 1507345, 1, 1507346, 1, 1507347, 1, 1507348, 0, 1507349, 0, 1507350, 1, 1507351, 1, 1507352, 1, 1507353, 1, 1507354, 1, 1507355, 1, 1507356, 1, 1507357, 1, 1507358, 1, 1507359, 1, 1572864, 1, 1572865, 1, 1572866, 1, 1572867, 1, 1572868, 1, 1572869, 1, 1572870, 1, 1572871, 1, 1572872, 1, 1572873, 1, 1572874, 1, 1572875, 0, 1572876, 0, 1572877, 0, 1572878, 0, 1572879, 0, 1572880, 0, 1572881, 1, 1572882, 1, 1572883, 1, 1572884, 0, 1572885, 0, 1572886, 0, 1572887, 1, 1572888, 1, 1572889, 1, 1572890, 1, 1572891, 1, 1572892, 1, 1572893, 1, 1572894, 1, 1572895, 1, 1638400, 0, 1638401, 1, 1638402, 1, 1638403, 1, 1638404, 1, 1638405, 1, 1638406, 1, 1638407, 1, 1638408, 1, 1638409, 1, 1638410, 1, 1638411, 1, 1638412, 0, 1638413, 0, 1638414, 0, 1638415, 0, 1638416, 1, 1638417, 1, 1638418, 1, 1638419, 0, 1638420, 0, 1638421, 0, 1638422, 0, 1638423, 1, 1638424, 1, 1638425, 1, 1638426, 1, 1638427, 1, 1638428, 1, 1638429, 1, 1638430, 0, 1638431, 0, 1703936, 0, 1703937, 1, 1703938, 1, 1703939, 1, 1703940, 1, 1703941, 1, 1703942, 1, 1703943, 1, 1703944, 1, 1703945, 1, 1703946, 1, 1703947, 1, 1703948, 0, 1703949, 0, 1703950, 0, 1703951, 1, 1703952, 1, 1703953, 1, 1703954, 1, 1703955, 0, 1703956, 0, 1703957, 0, 1703958, 1, 1703959, 1, 1703960, 0, 1703961, 0, 1703962, 0, 1703963, 1, 1703964, 0, 1703965, 0, 1703966, 0, 1703967, 0, 1769472, 0, 1769473, 1, 1769474, 1, 1769475, 1, 1769476, 1, 1769477, 1, 1769478, 1, 1769479, 1, 1769480, 1, 1769481, 1, 1769482, 1, 1769483, 1, 1769484, 1, 1769485, 0, 1769486, 0, 1769487, 1, 1769488, 1, 1769489, 1, 1769490, 1, 1769491, 1, 1769492, 1, 1769493, 1, 1769494, 1, 1769495, 1, 1769496, 1, 1769497, 0, 1769498, 0, 1769499, 0, 1769500, 0, 1769501, 0, 1769502, 0, 1769503, 0, 1835008, 0, 1835009, 0, 1835010, 1, 1835011, 1, 1835012, 1, 1835013, 1, 1835014, 1, 1835015, 1, 1835016, 1, 1835017, 1, 1835018, 1, 1835019, 1, 1835020, 1, 1835021, 1, 1835022, 0, 1835023, 1, 1835024, 1, 1835025, 1, 1835026, 1, 1835027, 1, 1835028, 1, 1835029, 1, 1835030, 1, 1835031, 1, 1835032, 1, 1835033, 1, 1835034, 1, 1835035, 1, 1835036, 0, 1835037, 0, 1835038, 0, 1835039, 0, 1900544, 0, 1900545, 0, 1900546, 0, 1900547, 1, 1900548, 1, 1900549, 1, 1900550, 1, 1900551, 1, 1900552, 1, 1900553, 1, 1900554, 1, 1900555, 1, 1900556, 1, 1900557, 1, 1900558, 1, 1900559, 0, 1900560, 0, 1900561, 1, 1900562, 1, 1900563, 1, 1900564, 1, 1900565, 1, 1900566, 1, 1900567, 1, 1900568, 1, 1900569, 1, 1900570, 1, 1900571, 1, 1900572, 1, 1900573, 0, 1900574, 0, 1900575, 0, 1966080, 0, 1966081, 0, 1966082, 0, 1966083, 0, 1966084, 1, 1966085, 1, 1966086, 1, 1966087, 1, 1966088, 1, 1966089, 1, 1966090, 1, 1966091, 1, 1966092, 1, 1966093, 1, 1966094, 1, 1966095, 1, 1966096, 0, 1966097, 1, 1966098, 1, 1966099, 1, 1966100, 1, 1966101, 1, 1966102, 1, 1966103, 1, 1966104, 1, 1966105, 1, 1966106, 1, 1966107, 1, 1966108, 1, 1966109, 1, 1966110, 0, 1966111, 0, 2031616, 0, 2031617, 0, 2031618, 0, 2031619, 0, 2031620, 1, 2031621, 1, 2031622, 1, 2031623, 1, 2031624, 1, 2031625, 1, 2031626, 1, 2031627, 1, 2031628, 1, 2031629, 1, 2031630, 1, 2031631, 1, 2031632, 1, 2031633, 1, 2031634, 0, 2031635, 0, 2031636, 1, 2031637, 1, 2031638, 1, 2031639, 1, 2031640, 1, 2031641, 1, 2031642, 1, 2031643, 1, 2031644, 1, 2031645, 1, 2031646, 1, 2031647, 1 )
script/script = ExtResource( 3 )

[node name="CloudLayer" type="ParallaxLayer" parent="BG"]

motion/scale = Vector2( 0.6, 0.6 )
motion/mirroring = Vector2( 2048, 2048 )

[node name="Clouds" type="Particles2D" parent="BG/CloudLayer"]

transform/pos = Vector2( 473.41, 397.229 )
config/amount = 42
config/lifetime = 20.0
config/time_scale = 0.1
config/preprocess = 1000.0
config/half_extents = Vector2( 1024, 1024 )
config/texture = ExtResource( 4 )
params/direction = 90.0
params/spread = 180.0
params/linear_velocity = 20.0
params/spin_velocity = 0.1
params/orbit_velocity = 0.0
params/gravity_direction = 0.0
params/gravity_strength = 0.0
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 0.0
params/initial_angle = 0.0
params/initial_size = 1.0
params/final_size = 2.0
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0
randomness/spread = 1.0
randomness/linear_velocity = 1.0
randomness/initial_angle = 1.0
randomness/initial_size = 1.0
randomness/final_size = 1.0
color/color = Color( 0.339844, 0.427521, 1, 1 )
color/color_ramp = SubResource( 1 )

[node name="OrbitLayer" type="ParallaxLayer" parent="BG"]

motion/scale = Vector2( 1, 1 )
motion/mirroring = Vector2( 2048, 2048 )
__meta__ = { "_editor_collapsed":true }

[node name="StaticBody2D" type="StaticBody2D" parent="BG/OrbitLayer"]

transform/pos = Vector2( 519.265, 296.723 )
input/pickable = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="Sprite" type="Sprite" parent="BG/OrbitLayer/StaticBody2D"]

texture = ExtResource( 5 )

[node name="StaticBody2D1" type="StaticBody2D" parent="BG/OrbitLayer"]

transform/pos = Vector2( 164.521, 868.825 )
transform/rot = -57.8406
input/pickable = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="Sprite" type="Sprite" parent="BG/OrbitLayer/StaticBody2D1"]

texture = ExtResource( 5 )

[node name="AtmoColor" type="CanvasModulate" parent="BG"]

color = Color( 0.933594, 0.623811, 0.455856, 1 )

[node name="RigidBody2D" parent="." instance=ExtResource( 6 )]

transform/pos = Vector2( 259.262, 212.535 )

[node name="Camera2D" type="Camera2D" parent="RigidBody2D"]

anchor_mode = 1
rotating = true
current = true
zoom = Vector2( 1, 1 )
limit/left = -10000000
limit/top = -10000000
limit/right = 10000000
limit/bottom = 10000000
drag_margin/h_enabled = true
drag_margin/v_enabled = true
smoothing/enable = true
smoothing/speed = 5.0
drag_margin/left = 0.05
drag_margin/top = 0.05
drag_margin/right = 0.05
drag_margin/bottom = 0.05

[node name="zoom1" type="Button" parent="RigidBody2D/Camera2D"]

margin/left = -123.0
margin/top = 207.0
margin/right = -97.0
margin/bottom = 226.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
toggle_mode = false
text = "1x"
flat = false

[node name="zoom2" type="Button" parent="RigidBody2D/Camera2D"]

margin/left = -83.0
margin/top = 207.0
margin/right = -57.0
margin/bottom = 226.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
toggle_mode = false
text = "1.5x"
flat = false

[node name="zoom3" type="Button" parent="RigidBody2D/Camera2D"]

margin/left = -33.0
margin/top = 207.0
margin/right = 3.0
margin/bottom = 226.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
toggle_mode = false
text = "2x"
flat = false

[node name="IterateMap" type="Button" parent="RigidBody2D"]

visibility/visible = false
margin/left = -27.0
margin/top = 24.0
margin/right = 27.0
margin/bottom = 43.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
toggle_mode = false
text = "Iterate!"
flat = false

[connection signal="pressed" from="RigidBody2D/Camera2D/zoom1" to="." method="set_distance" binds= [ 1.0 ]]

[connection signal="pressed" from="RigidBody2D/Camera2D/zoom2" to="." method="set_distance" binds= [ 0.5 ]]

[connection signal="pressed" from="RigidBody2D/Camera2D/zoom3" to="." method="set_distance" binds= [ 0.25 ]]

[connection signal="pressed" from="RigidBody2D/IterateMap" to="BG/MapLayer/TileMap" method="_on_IterateMap_pressed"]


